# ct2fe-bvtv

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md  demo_abdomen_mesh.inp  demo_registration_landmarks.json
docs/: DATA_REQUIREMENTS.md  HIGH_QUALITY_DEMO.md  IMPLEMENTATION_NOTES.md  REPRODUCIBILITY.md
examples/: landmarks_template.json  run_demo.sh  run_high_quality_offline_demo.sh  transform_template.json
outputs/: README.md  demo_abdomen_bvtv.csv  demo_abdomen_bvtv.mapped.inp  demo_abdomen_bvtv.materials.inp  demo_abdomen_bvtv_otsu.csv  demo_abdomen_bvtv_otsu.mapped.inp  demo_abdomen_bvtv_otsu.materials.inp  demo_abdomen_bvtv_registered.csv  demo_abdomen_bvtv_registered.mapped.inp  demo_peri_implant_bvtv.csv  verification_report.md
outputs/visualization_300/: report.html
outputs/visualization_otsu/: report.html
scripts/: download_demo_data.py  make_demo_inp.py  map_bvtv_to_fe.py  verify_pipeline.py  visualize_bvtv.py
tests/: test_mapper_synthetic.py
