[project]
name = "ct2fe-bvtv"
version = "0.1.0"
description = "Non-official Python implementation of CT-derived BV/TV mapping to finite element meshes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dr. Jean-Jacques Ponciano" }
]
dependencies = [
  "numpy>=1.24",
  "scikit-image>=0.20",
  "matplotlib>=3.7"
]

[project.urls]
Reference = "https://doi.org/10.1016/j.jmbbm.2024.106688"

[tool.pytest.ini_options]
testpaths = ["tests"]
